tests/should_fail/register.c
int main() {
	register int a = 10;
	int *addr = &a;
	(void)addr;
}
